# garmin_mcp

./: .gitignore  README.md  pyproject.toml  test_auth_and_cache.py  test_mcp_server.py
src/garmin_mcp/: __init__.py
src/health_export/: __init__.py  normalizers.py  route.py  service.py  timeutil.py
tests/: conftest.py  test_health_export_wiring.py  test_normalizers.py  test_route.py  test_service.py  test_timeutil.py
