[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "garmin-mcp"
version = "0.1.0"
description = "MCP server to access Garmin data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv==1.0.1",
    "garminconnect==0.2.25",
    "requests==2.32.3",
    "mcp>=1.4.0,<2.0.0",
    "garth==0.5.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/garmin_mcp", "src/health_export"]

[project.scripts]
garmin-mcp = "garmin_mcp:main"

[tool.uv.sources]
garmin-mcp = { workspace = true }
